--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
                 <div class="col-lg-8">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
-                        <form name="contact" action="#home" onclick="openModal('success')" method="POST" netlify>
+                        <form name="contact" action="#home"  method="POST" netlify>
                             <div class="form-group">
                                 <input class="form-control" type="text" name="name" placeholder="Name *" required>
                             </div>
@@ -859,7 +859,7 @@
                                     required></textarea>
                             </div>
                             <div class="form-group ">
-                                <button type="submit" class="form-control btn btn-primary">Send Message</button>
+                                <button type="submit" class="form-control btn btn-primary" onclick="openModal('success')">Send Message</button>
                             </div>
                         </form>
                     </div>
