--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     <section class="section bg-dark py-5">
         <div class="container text-center">
             <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
-            <a class="btn bg-primary w-lg" href="http://127.0.0.1:5500/public_html/index.html#contact">Hire me</a>
+            <a class="btn bg-primary w-lg" href="#contact">Hire me</a>
         </div>
     </section>
 
