--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
                 <h3 class="font-weight-light">Personal Info</h3>
                 <span class="line mb-5"></span>
                 <ul class="mt40 info list-unstyled">
-                    <li><span>Birthdate</span> : 26/01/1995</li>
                     <li><span>Email</span> : mateobonilla95@outlook.com</li>
-                    <li><span>Phone</span> : + (593) 988432826</li>
+                    <li><span>Phone Number</span> : + (593) 988432826</li>
                     <li><span>LinkedIn</span><a href="https://www.linkedin.com/in/mateodbonillaerazo/"> :
                             www.linkedin.com/in/mateodbonillaerazo </a></li>
                     <li><span>Behance</span><a href="https://www.behance.net/mateodavidbonilla"> :
