--- a/taburetes.html
+++ b/taburetes.html
@@ -24,8 +24,11 @@
     <!-- Página de portada -->
     <div class="page">
         <div class="lookbook-title">Sirenas - Taburetes</div>
-        <div class="image-placeholder"><video autoplay loop playsinline class="video"
-                src="./assets/imgs/Taburetes/taburetes.mp4"></video></div>
+        <div class="image-placeholder"><iframe class="video"
+            src="https://www.youtube.com/embed/IoMtD9ji0_8" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe></div>
         <p class="subtitle">Motion Graphics</p>
         <p class="text-section">Creado en Affter Effects.</p>
     </div>
