--- a/taburetes.html
+++ b/taburetes.html
@@ -30,7 +30,7 @@
             allowfullscreen>
         </iframe></div>
         <p class="subtitle">Motion Graphics</p>
-        <p class="text-section">Creado en Affter Effects.</p>
+        <p class="text-section">Affter Effects.</p>
     </div>
 <footer class="footer py-3">
     <div class="container">
