--- a/survival-m.html
+++ b/survival-m.html
@@ -25,7 +25,7 @@
     <div class="page">
         <div class="lookbook-title">SURVIVAL M</div>
         <div class="image-placeholder"><video autoplay loop muted playsinline class="video"
-                src="./assets/imgs/survivalM/survival-m.mp4"></video></div>
+                src="./assets/imgs/survivalM/survival-m.m4v"></video></div>
         <p class="subtitle">Unity 3D Game</p>
         <p class="text-section">Inspirado en juego de zoombies.</p>
     </div>
