--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
     <header class="header">
         <video autoplay loop muted playsinline class="background-video">
-            <source src="/public_html/assets/imgs/resume.mp4" type="video/mp4">
+            <source src="./assets/imgs/resume.mp4" type="video/mp4">
             Tu navegador no soporta videos en HTML5.
         </video>
         <div class="container">
