--- a/dlc.html
+++ b/dlc.html
@@ -26,7 +26,7 @@
     <div class="page">
         <div class="lookbook-title">Dragon Learing Center</div>
         <div class="image-placeholder"><video autoplay loop muted playsinline class="video"
-                src="./assets/imgs/Dlc/dlc.mp4"></video></div>
+                src="./assets/imgs/Dlc/dlc.m4v"></video></div>
         <p class="subtitle">App Mobile</p>
         <p class="text-section">Angular y Ionic Framework.</p>
     </div>
