--- a/dto.html
+++ b/dto.html
@@ -25,7 +25,7 @@
     <div class="page">
         <div class="lookbook-title">Dragon Trade Off</div>
         <div class="image-placeholder"><video autoplay loop muted playsinline class="video"
-                src="./assets/imgs/DTO/dto.mp4"></video></div>
+                src="./assets/imgs/DTO/dto.m4v"></video></div>
         <p class="subtitle">Web app</p>
         <p class="parrafo">Aplicación web creada para emprendedores de la USFQ.</p>
     </div>
