--- a/dlc.html
+++ b/dlc.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="assets/css/modalmensaje.css">
     <link rel="stylesheet" href="assets/css/dragons.css">
 
+    <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
+
 </head>
 <div class="lookbook">
 
