--- a/foto.html
+++ b/foto.html
@@ -17,6 +17,8 @@
     <!-- modal -->
     <link rel="stylesheet" href="assets/css/modal.css">
     <link rel="stylesheet" href="assets/css/foto.css">
+    
+    <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
 
 </head>
 <div class="lookbook">
