--- a/components.html
+++ b/components.html
@@ -12,6 +12,8 @@
    <!-- Bootstrap + Steller  -->
    <link rel="stylesheet" href="assets/css/mateob.css">
    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
+
+   <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
 </head>
 <body>
 
