--- a/portafolio.html
+++ b/portafolio.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="assets/css/modal.css">
     <link rel="stylesheet" href="assets/css/modalmensaje.css">
 
+    <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
+
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
