--- a/taburetes.html
+++ b/taburetes.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="assets/css/modal.css">
     <link rel="stylesheet" href="assets/css/modalmensaje.css">
 
+    <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
+
 </head>
 <div class="lookbook">
 
