--- a/manual-marca.html
+++ b/manual-marca.html
@@ -78,10 +78,16 @@
     </div>
 </footer>
 
-<div class="flecha-flotante" onclick="history.back();">
+<div class="flecha-flotante" onclick="window.location.href='dto.html';">
     <i class="ti-angle-double-left"></i>
 </div>
-
+<div class="flecha-flotante right" onclick="window.location.href='taburetes.html';">
+    <i class="ti-angle-double-right"></i>
+</div>
+<div class="projects" onclick="window.location.href='portafolio.html';">
+    <div class="btn btn-outline-danger" href="assets/cv/MATEO BONILLA CV.pdf" download="MateoBonilaCV"><i
+        class="icon-down-circled2 "></i>Projects</div>
+</div>
 
 <!-- core  -->
 <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
