nuevo-bg-alportafolio

--- a/portafolio.html
+++ b/portafolio.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="assets/css/mateob.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
 
-    <!-- modal -->
-    <link rel="stylesheet" href="assets/css/modal.css">
-    <link rel="stylesheet" href="assets/css/modalmensaje.css">
+
 
     <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
 
@@ -87,9 +85,13 @@
                     <a href="#" data-filter=".web">
                         Web/App's
                     </a>
+                    <a href="#" data-filter=".ux">
+                        UX/UI
+                    </a>
                     <a href="#" data-filter=".design">
                         Design
                     </a>
+                    
                 </div>
                 <div id="project-description" class="mb-4 text-center text-muted"
                     style="min-height: 60px; font-style: italic;">
@@ -104,6 +106,19 @@
                                     <div class="text-holder">
                                         <h6 class="title">Fragment</h6>
                                         <p class="subtitle">MetroidVania 2d</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 ux new">
+                        <div class="portfolio-item">
+                            <a href="bgDesignChalenge.html">
+                                <img src="assets/imgs/BG/bgPortada.png" style="background-color:#eea553" class="img-fluid">
+                                <div class="content-holder thumbnail">
+                                    <div class="text-holder">
+                                        <h6 class="title">Design Challenge</h6>
+                                        <p class="subtitle">UX/UI Design</p>
                                     </div>
                                 </div>
                             </a>
@@ -243,12 +258,13 @@
 
     <!-- MateoB js -->
     <script src="assets/js/mateob.js"></script>
-    <script src="assets/js/modal.js"></script>
+
 
     <script>
         const descriptions = {
             ".game": "Projects developed in Unity and other engines, focused on gameplay, art, and narrative design.",
             ".web": "Web and mobile applications showcasing experience in UX design, frontend development, and frameworks like Angular.",
+            ".ux": "Projects focused on UX/UI design, prototyping, wireframing, and interactive demos that explore visual creativity.",
             ".design": "Graphic design, branding, animation, and photography projects that explore visual creativity.",
             ".new": "The latest projects added to this portfolio, covering various areas of work."
 
