--- a/bgDesignChalenge.html
+++ b/bgDesignChalenge.html
@@ -13,61 +13,59 @@
     <link rel="stylesheet" href="assets/css/mateob.css">
     <link rel="stylesheet" href="assets/css/diseno.css">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-
-    <!-- modal -->
-    <link rel="stylesheet" href="assets/css/modal.css">
-    <link rel="stylesheet" href="assets/css/modalmensaje.css">
-
     <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
-
 </head>
 
 <body>
-
-    <div class="lookbook">
+    <div class="lookbook ">
 
         <!-- Página de portada -->
         <div class="page">
-            <div class="lookbook-title" style="background-color: black;">Alpina Modular Booth Design</div>
+            <div class="lookbook-title">
+                <img src="./assets/imgs/BG/portada.png" alt="portada bg">
+            </div>
         </div>
-        <p class="title">Alpina - Modular Booth Design</p>
+        <p class="title">BG Challenge</p>
         <section class="case-wrap">
             <!-- IZQUIERDA: tu “tabla” de labels/valores -->
             <dl class="meta-grid">
                 <dt>CATEGORY</dt>
                 <dd>
                     <ul class="meta-list">
-                        <li>Design</li>
-                        <li>Interactive brand</li>
+                        <li>UX/UI Design</li>
+                        <li>Prototyping</li>
+
                     </ul>
                 </dd>
                 <dt>YEAR</dt>
                 <dd>2025</dd>
                 <dt>CLIENT</dt>
-                <dd>Avena Alpina</dd>
+                <dd>Banco Guayaquil</dd>
             </dl>
             <div class="case-desc">
                 <p>
-                    Promotional stand for the “Mundozarella” campaign.
-                    Aimed at showcasing two specialty cheeses through an interactive experience. I designed an
-                    interactive booth built around two distinct “worlds,” encouraging user engagement and product
-                    discovery.
+                    Design and prototyping of a credit card application workflow for a banking app, focused on improving
+                    accessibility and reducing friction. The flow supports both existing app users and non-users.
                 </p>
                 <p>
-                    Tech & tools: Unity (3D render), Adobe Illustrator (artwork and visual design).
+                    Tech: Figma (design & prototyping).
                 </p>
+                <a class="view-link"
+                    href="https://www.figma.com/design/sSj54yGlHD0i9uZiWVBYzK/BG-Design-Challenge?node-id=7376-199&t=CcHgUSDeVNd36XFc-1"
+                    target="_blank" rel="noopener">view the
+                    website</a>
             </div>
         </section>
         <div class="page">
-            <p class="subtitle">Gallery</p>
-            <div class="image-placeholder"><video autoplay loop muted playsinline class="video"
-                    src="./assets/imgs/Alpina/RenderStand - SampleScene - Windows, Mac, Linux - Unity 6.0 (6000.0.47f1) _DX11_ 2025-04-28 17-48-50.mp4"></video>
+            <p class="subtitle">Work Flow</p>
+            <div class="image-placeholder"><img src="./assets/imgs/BG/worflow1.png" alt="Home Page Bi Activate"> </div>
+            <div class="image-placeholder"><img src="./assets/imgs/BG/worflow2.png" alt="Home Page Bi Activate"> </div>
+            <div class="image-placeholder"><img src="./assets/imgs/BG/2 worflow1.png" alt="Home Page Bi Activate">
             </div>
-            <div class="image-placeholder"><img src="./assets/imgs/Alpina/Captura de pantalla 2025-04-28 174435.png"
-                    alt=""></div>
-            <div class="image-placeholder"><img src="./assets/imgs/Alpina/Captura de pantalla 2025-04-28 174357.png"
-                    alt=""></div>
+            <div class="image-placeholder"><img src="./assets/imgs/BG/2workflow2.png" alt="Home Page Bi Activate">
+            </div>
         </div>
+    </div>
     </div>
 
     <footer class="footer py-3">
@@ -81,13 +79,12 @@
         </div>
     </footer>
 
-    <div class="flecha-flotante" onclick="window.location.href='foto.html';">
+    <div class="flecha-flotante" onclick="window.location.href='taburetes.html';">
         <i class="ti-angle-double-left"></i>
     </div>
-    <div class="flecha-flotante-right" onclick="window.location.href='fragment.html';">
+    <div class="flecha-flotante-right" onclick="window.location.href='foto.html';">
         <i class="ti-angle-double-right"></i>
     </div>
-
     <div class="projects" onclick="window.location.href='portafolio.html';">
         <div class="btn btn-outline-danger" href="assets/cv/MATEO BONILLA CV.pdf" download="MateoBonilaCV"><i
                 class="icon-down-circled2 "></i>Projects</div>
@@ -104,10 +101,11 @@
     <!-- Isotope  -->
     <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
 
+
     <!-- MateoB js -->
     <script src="assets/js/mateob.js"></script>
 
-
+    <script src="assets/js/dragons.js"></script>
 </body>
 
 </html>
