nuevo-bg-alportafolio

--- a/bgDesignChalenge.html
+++ b/bgDesignChalenge.html
@@ -85,10 +85,10 @@
     <div class="flecha-flotante-right" onclick="window.location.href='foto.html';">
         <i class="ti-angle-double-right"></i>
     </div>
-    <div class="projects" onclick="window.location.href='portafolio.html';">
+    <a class="projects" href="portafolio.html">
         <div class="btn btn-outline-danger" href="assets/cv/MATEO BONILLA CV.pdf" download="MateoBonilaCV"><i
                 class="icon-down-circled2 "></i>Projects</div>
-    </div>
+    </a>
 
     <!-- core  -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
