correccion bug redireciones

--- a/bgDesignChalenge.html
+++ b/bgDesignChalenge.html
@@ -79,15 +79,16 @@
         </div>
     </footer>
 
-    <div class="flecha-flotante" onclick="window.location.href='taburetes.html';">
+    <a class="flecha-flotante" href='biActivate.html';>
         <i class="ti-angle-double-left"></i>
-    </div>
-    <div class="flecha-flotante-right" onclick="window.location.href='foto.html';">
+    </a>
+    <a class="flecha-flotante-right" href='foto.html'>
         <i class="ti-angle-double-right"></i>
-    </div>
+    </a>
     <a class="projects" href="portafolio.html">
-        <div class="btn btn-outline-danger" href="assets/cv/MATEO BONILLA CV.pdf" download="MateoBonilaCV"><i
-                class="icon-down-circled2 "></i>Projects</div>
+        <div class="btn btn-outline-danger">
+            Projects
+        </div>
     </a>
 
     <!-- core  -->
