--- a/dto.html
+++ b/dto.html
@@ -21,110 +21,115 @@
     <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
 
 </head>
-<div class="lookbook">
 
-    <!-- Página de portada -->
-    <div class="page">
-        <div class="lookbook-title" style="background-color: rgb(202, 9, 9);">Dragon Trade Off</div>
+<body>
+    <div class="lookbook">
+
+        <!-- Página de portada -->
+        <div class="page">
+            <div class="lookbook-title" style="background-color: rgb(202, 9, 9);">Dragon Trade Off</div>
+        </div>
+        <p class="title">DTO</p>
+        <section class="case-wrap">
+            <!-- IZQUIERDA: tu “tabla” de labels/valores -->
+            <dl class="meta-grid">
+                <dt>CATEGORY</dt>
+                <dd>
+                    <ul class="meta-list">
+                        <li>Web Development</li>
+                        <li>e-commerce</li>
+                        <li>UX/UI Design</li>
+                    </ul>
+                </dd>
+                <dt>YEAR</dt>
+                <dd>2023</dd>
+            </dl>
+            <div class="case-desc">
+                <p>
+                    Dragon Traid Of (DTO) is an e-commerce platform for students to showcase and manage their ventures.
+                    It
+                    provides easy access for interested buyers and supports buying and selling online, with digital or
+                    in-person payments.
+                </p>
+                <p>
+                    Tech stack: React, TypeScript/JavaScript, HTML5, CSS, MongoDB; hosted on Heroku.
+                </p>
+            </div>
+        </section>
+        <div class="page">
+            <p class="subtitle">Web e-commerce app</p>
+            <div class="image-placeholder"><video autoplay loop muted playsinline class="video"
+                    src="./assets/imgs/DTO/dto.m4v"></video></div>
+            <div>
+                <p class="subtitle">Home Page</p>
+                <div>
+                    <img class="image-placeholder" src="./assets/imgs/DTO/DTO1.png" alt="home page image">
+                </div>
+            </div>
+            <div>
+                <p class="subtitle">Login Page</p>
+                <div>
+                    <img class="image-placeholder" src="./assets/imgs/DTO/DTO2.png" alt="login page image">
+                </div>
+            </div>
+            <div>
+                <p class="subtitle">About Us Page</p>
+                <div>
+                    <img class="image-placeholder" src="./assets/imgs/DTO/DTO3.png" alt="login page image">
+                </div>
+            </div>
+            <div>
+                <p class="subtitle">Commerce Page</p>
+                <div>
+                    <img class="image-placeholder" src="./assets/imgs/DTO/DTO5.png" alt="login page image">
+                </div>
+            </div>
+            <div>
+                <p class="subtitle">Form Page</p>
+                <div>
+                    <img class="image-placeholder" src="./assets/imgs/DTO/DTO4.png" alt="login page image">
+                </div>
+            </div>
+        </div>
     </div>
-    <p class="title">DTO</p>
-    <section class="case-wrap">
-        <!-- IZQUIERDA: tu “tabla” de labels/valores -->
-        <dl class="meta-grid">
-            <dt>CATEGORY</dt>
-            <dd>
-                <ul class="meta-list">
-                    <li>Web Development</li>
-                    <li>e-commerce</li>
-                    <li>UX/UI Design</li>
-                </ul>
-            </dd>
-            <dt>YEAR</dt>
-            <dd>2023</dd>
-        </dl>
-        <div class="case-desc">
-            <p>
-                Dragon Traid Of (DTO) is an e-commerce platform for students to showcase and manage their ventures. It
-                provides easy access for interested buyers and supports buying and selling online, with digital or
-                in-person payments.
+
+    <footer class="footer py-3">
+        <div class="container">
+            <p class="small mb-0 text-light">
+                &copy;
+                <script>document.write(new Date().getFullYear())</script> Created With <i
+                    class="ti-heart text-danger"></i>
+                By <a href="#" target="_blank"><span class="text-danger">MateoB</span></a>
             </p>
-            <p>
-                Tech stack: React, TypeScript/JavaScript, HTML5, CSS, MongoDB; hosted on Heroku.
-            </p>
         </div>
-    </section>
-    <div class="page">
-        <p class="subtitle">Web e-commerce app</p>
-        <div class="image-placeholder"><video autoplay loop muted playsinline class="video"
-                src="./assets/imgs/DTO/dto.m4v"></video></div>
-        <div>
-            <p class="subtitle">Home Page</p>
-            <div>
-                <img class="image-placeholder" src="./assets/imgs/DTO/DTO1.png" alt="home page image">
-            </div>
-        </div>
-        <div>
-            <p class="subtitle">Login Page</p>
-            <div>
-                <img class="image-placeholder" src="./assets/imgs/DTO/DTO2.png" alt="login page image">
-            </div>
-        </div>
-        <div>
-            <p class="subtitle">About Us Page</p>
-            <div>
-                <img class="image-placeholder" src="./assets/imgs/DTO/DTO3.png" alt="login page image">
-            </div>
-        </div>
-        <div>
-            <p class="subtitle">Commerce Page</p>
-            <div>
-                <img class="image-placeholder" src="./assets/imgs/DTO/DTO5.png" alt="login page image">
-            </div>
-        </div>
-        <div>
-            <p class="subtitle">Form Page</p>
-            <div>
-                <img class="image-placeholder" src="./assets/imgs/DTO/DTO4.png" alt="login page image">
-            </div>
-        </div>
-    </div>
-</div>
+    </footer>
 
-<footer class="footer py-3">
-    <div class="container">
-        <p class="small mb-0 text-light">
-            &copy;
-            <script>document.write(new Date().getFullYear())</script> Created With <i class="ti-heart text-danger"></i>
-            By <a href="#" target="_blank"><span class="text-danger">MateoB</span></a>
-        </p>
-    </div>
-</footer>
+    <a class="flecha-flotante" href='survival-m.html'>
+        <i class="ti-angle-double-left"></i>
+    </a>
+    <a class="flecha-flotante-right" href='manual-marca.html'>
+        <i class="ti-angle-double-right"></i>
+    </a>
+    <a class="projects" href="portafolio.html">
+        <div class="btn btn-outline-danger">
+            Projects
+        </div>
+    </a>
 
-<div class="flecha-flotante" onclick="window.location.href='survival-m.html';">
-    <i class="ti-angle-double-left"></i>
-</div>
-<div class="flecha-flotante-right" onclick="window.location.href='manual-marca.html';">
-    <i class="ti-angle-double-right"></i>
-</div>
-<div class="projects" onclick="window.location.href='portafolio.html';">
-    <div class="btn btn-outline-danger" href="assets/cv/MATEO BONILLA CV.pdf" download="MateoBonilaCV"><i
-            class="icon-down-circled2 "></i>Projects</div>
-</div>
+    <!-- core  -->
+    <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
 
-<!-- core  -->
-<script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-<script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-
-<!-- bootstrap 3 affix -->
-<script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"></script>
-<!-- Isotope  -->
-<script src="assets/vendors/isotope/isotope.pkgd.js"></script>
+    <!-- bootstrap 3 affix -->
+    <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <!-- Isotope  -->
+    <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
 
 
-<!-- MateoB js -->
-<script src="assets/js/mateob.js"></script>
+    <!-- MateoB js -->
+    <script src="assets/js/mateob.js"></script>
 
 
 </body>
