--- a/fragment.html
+++ b/fragment.html
@@ -95,17 +95,18 @@
         </div>
     </footer>
 
-    <div class="flecha-flotante" onclick="window.location.href='foto.html';">
+    <a class="flecha-flotante" href='foto.html'>
         <i class="ti-angle-double-left"></i>
-    </div>
-    <div class="flecha-flotante-right" onclick="window.location.href='survival-m.html';">
+    </a>
+    <a class="flecha-flotante-right" href='survival-m.html'>
         <i class="ti-angle-double-right"></i>
-    </div>
+    </a>
 
-    <div class="projects" onclick="window.location.href='portafolio.html';">
-        <div class="btn btn-outline-danger" href="assets/cv/MATEO BONILLA CV.pdf" download="MateoBonilaCV"><i
-                class="icon-down-circled2 "></i>Projects</div>
-    </div>
+    <a class="projects" href="portafolio.html">
+        <div class="btn btn-outline-danger">
+            Projects
+        </div>
+    </a>
 
     <!-- core  -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
