--- a/resume.html
+++ b/resume.html
@@ -89,7 +89,7 @@
                                 seamless user experiences.</P>
                             <hr>
                             <h6 class="title text-danger">2022 - Present</h6>
-                            <P>Game Develop</P>
+                            <P>Game Development</P>
                             <P class="subtitle">
                                 Experienced in programming immersive gameplay mechanics and interactive systems using
                                 engines like Unity (C#). Proficient in designing
@@ -122,7 +122,7 @@
                                 other programming languages.</P>
                             <hr>
                             <h6 class="title text-danger">2022 - 2025</h6>
-                            <P>Minor in Comunication Design</P>
+                            <P>Minor in Communication Design</P>
                             <P class="subtitle">Experienced in photography, Adobe Design, and graphic design, with a
                                 focus
                                 on visual storytelling and effective communication.</P>
@@ -211,7 +211,7 @@
                             <div class="m-auto"><i class="ti-alarm-clock icon-xl"></i></div>
                         </div>
                         <div class="col-7 text-left py-3">
-                            <h1 class="text-danger font-weight-bold font40">10K</h1>
+                            <h1 class="text-danger font-weight-bold font40">8k</h1>
                             <p class="text-light mb-1">Hours Worked</p>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                             <div class="m-auto"><i class="ti-layers-alt icon-xl"></i></div>
                         </div>
                         <div class="col-7 text-left py-3">
-                            <h1 class="text-danger font-weight-bold font40">8</h1>
+                            <h1 class="text-danger font-weight-bold font40">10</h1>
                             <p class="text-light mb-1">Project Finished</p>
                         </div>
                     </div>
@@ -307,7 +307,7 @@
                         </div>
                         <div class="card-body px-4 py-3">
                             <h5 class="mb-3 card-title text-dark">Graphic Communication</h5>
-                            <P class="subtitle">Iclude creating visual identities (logos, brand guidelines), designing
+                            <P class="subtitle">Include creating visual identities (logos, brand guidelines), designing
                                 advertising materials (ads, banners), developing packaging that reflects brand
                                 messaging, producing infographics and data visualizations for clarity, and crafting
                                 promotional materials for both print and digital platforms.</P>
