--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="header-content">
                 <h1 class="header-title">NITE</h1>
-                <h6 class="header-mono">Frond end Designer | Game Developer | UX/UI Designer</h6>
+                <h6 class="header-mono">Frond-end Developer/Designer | Game Developer | UX/UI Designer</h6>
             </div>
         </div>
     </header>
@@ -115,7 +115,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>UX Design</h6>
-                        <p class="subtitle"> Iteracción, Simplicity, Intuitiveness .</p>
+                        <p class="subtitle"> Interaction, Simplicity, Intuitiveness .</p>
                         <hr>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-paint-bucket icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Web Development</h6>
-                        <p class="subtitle">Web Info, Web App's, Mobile App's.</p>
+                        <p class="subtitle">Web Info, Web Apps, Mobile Apps.</p>
                         <hr>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-game icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Game Development</h6>
-                        <p class="subtitle">Game Develop, Level Design, Game Art.</p>
+                        <p class="subtitle">Game Development, Level Design, Game Art.</p>
                         <hr>
                     </div>
                 </div>
