--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
+<body>
     <header class="header">
         <video autoplay loop muted playsinline class="background-video">
             <source src="./assets/imgs/idex.m4v" type="video/mp4">
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="header-content">
                 <h1 class="header-title">NITE</h1>
-                <h6 class="header-mono">Frond-end Developer/Designer | Game Developer | UX/UI Designer</h6>
+                <h6 class="header-mono">Front-End Developer/Designer | Game Developer | UX/UI Designer</h6>
             </div>
         </div>
     </header>
@@ -61,6 +61,9 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link">Services</a>
+                    </li>
                     <li class="nav-item">
                         <a href="portafolio.html" class="nav-link">Portfolio</a>
                     </li>
