--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
+<body>
     <header class="header">
         <video autoplay loop muted playsinline class="background-video">
             <source src="./assets/imgs/resume.m4v" type="video/mp4">
@@ -26,7 +26,7 @@
         <div class="container">
             <div class="header-content">
                 <h1 class="header-title">Mateo Bonilla</h1>
-                <h6 class="header-mono">Frond end Designer | Game Developer | Graphic Designer</h6>
+                <h6 class="header-mono">Front-End Developer/Designer | Game Developer | Graphic Designer</h6>
             </div>
         </div>
     </header>
@@ -57,6 +57,9 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link">Services</a>
+                    </li>
                     <li class="nav-item">
                         <a href="portafolio.html" class="nav-link">Portfolio</a>
                     </li>
@@ -252,101 +255,6 @@
             </div>
         </div>
     </section>
-    <section class="section" id="service">
-        <div class="container">
-            <h2 class="mb-5 pb-4"><span class="text-danger">My</span> Services</h2>
-            <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-5">
-                        <div class="card-header has-icon">
-                            <i class="ti-id-badge text-danger" aria-hidden="true"></i>
-                        </div>
-                        <div class="card-body px-4 py-3">
-                            <h5 class="mb-3 card-title text-dark">Web Design</h5>
-                            <P class="subtitle">
-                                Web design services include custom website design, front-end and back-end development,
-                                user experience (UX) and user interface (UI) design, and performance optimization.
-                                Additionally, services extend to e-commerce solutions, mobile-first designs, and ongoing
-                                maintenance and updates for security and content management.</P>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-5">
-                        <div class="card-header has-icon">
-                            <i class="ti-game text-danger" aria-hidden="true"></i>
-                        </div>
-                        <div class="card-body px-4 py-3">
-                            <h5 class="mb-3 card-title text-dark">Game Development</h5>
-                            <P class="subtitle">Include concept design, programming, and
-                                coding for mechanics and AI. Art and animation encompass character modeling, asset
-                                creation, and environmental design. Sound and music cover effects, voiceovers, and
-                                composing tracks. Quality assurance ensures testing, bug fixing, and performance
-                                optimization, with publishing services for distribution and marketing.</P>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-5">
-                        <div class="card-header has-icon">
-                            <i class="ti-mobile text-danger" aria-hidden="true"></i>
-                        </div>
-                        <div class="card-body px-4 py-3">
-                            <h5 class="mb-3 card-title text-dark">App Development</h5>
-                            <P class="subtitle">App development services include UI/UX design, programming for Android,
-                                and cross-platform apps, and backend development with API and database integration.
-                                Testing ensures performance, while maintenance provides ongoing updates for security and
-                                compatibility.</P>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-5">
-                        <div class="card-header has-icon">
-                            <i class="ti-pencil-alt text-danger" aria-hidden="true"></i>
-                        </div>
-                        <div class="card-body px-4 py-3">
-                            <h5 class="mb-3 card-title text-dark">Graphic Communication</h5>
-                            <P class="subtitle">Include creating visual identities (logos, brand guidelines), designing
-                                advertising materials (ads, banners), developing packaging that reflects brand
-                                messaging, producing infographics and data visualizations for clarity, and crafting
-                                promotional materials for both print and digital platforms.</P>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-5">
-                        <div class="card-header has-icon">
-                            <i class="ti-video-clapper text-danger" aria-hidden="true"></i>
-                        </div>
-                        <div class="card-body px-4 py-3">
-                            <h5 class="mb-3 card-title text-dark">Video Editor</h5>
-                            <P class="subtitle">
-                                Video editing services include editing and cutting raw footage into a polished final
-                                product, color correction and grading for visual enhancement, adding motion graphics and
-                                visual effects to elevate the video, audio editing to improve clarity and sync, and
-                                optimizing video formats for different platforms or purposes.</P>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="card mb-5">
-                        <div class="card-header has-icon">
-                            <i class="ti-widget text-danger" aria-hidden="true"></i>
-                        </div>
-                        <div class="card-body px-4 py-3">
-                            <h5 class="mb-3 card-title text-dark">UX Design</h5>
-                            <P class="subtitle">UX design services include user research to understand needs,
-                                wireframing and prototyping for layout and functionality, information architecture for
-                                clear navigation, UI design for intuitive interfaces, and usability testing to ensure a
-                                seamless user experience.</P>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- <section class="section bg-custom-gray" id="price">
         <div class="container">
             <h1 class="mb-5"><span class="text-danger">Packs</span> Pricing</h1>
@@ -422,14 +330,6 @@
             </div>
         </div>
     </section> -->
-    <section class="section bg-dark py-5">
-        <div class="container text-center">
-            <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
-            <a class="btn bg-primary w-lg" href="contact.html">Hire me</a>
-        </div>
-    </section>
-
-
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
