--- a/portafolio.html
+++ b/portafolio.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
+<body>
     <header class="header">
         <video autoplay loop muted playsinline class="background-video">
             <source src="./assets/imgs/portafolio.m4v" type="video/mp4">
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="header-content">
                 <h1 class="header-title">NITE</h1>
-                <h6 class="header-mono">Frond end Designer | Game Developer | Graphic Designer</h6>
+                <h6 class="header-mono">Front-End Developer/Designer | Game Developer | Graphic Designer</h6>
             </div>
         </div>
     </header>
@@ -59,6 +59,9 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link">Services</a>
+                    </li>
                     <li class="nav-item">
                         <a href="portafolio.html" class="nav-link active">Portfolio</a>
                     </li>
